[package]
name = "pixel-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.9.2", features = ["armor"] }
axum = { version = "0.6.19", features = ["tracing"] }
axum-client-ip = "0.4.1"
clap = { version = "4.3.19", features = ["derive", "env"] }
color-eyre = "0.6.2"
data-encoding = "2.4.0"
eyre = "0.6.8"
handlebars = "4.3.7"
once_cell = "1.18.0"
postcard = { version = "1.0.6", features = ["use-std"] }
serde = { version = "1.0.175", features = ["derive"] }
serenity = "0.11.6"
time = { version = "0.3.23", features = ["formatting"] }
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.3", features = ["trace"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
url = "2.4.0"
